# pandas-validate

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/pandas_validate/: Schema.py  __init__.py
src/pandas_validate/columns/: Column.py  DateTimeColumn.py  DecimalColumn.py  FloatColumn.py  IntColumn.py  TextColumn.py  __init__.py
src/tests/: test_Column.py  test_DateTimeColumn.py  test_DecimalColumn.py  test_IntColumn.py
tests/: test_FloatColumn.py  test_Schema.py  test_TextColumn.py
