[project]
name = "pandas-validate"
version = "0.0.1"
authors = [
  { name="Larry Green", email="larrygreen@duck.com" },
]
description = "A python package used for validating pandas dataframes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/larrygreen3/pandas-validate"
"Bug Tracker" = "https://github.com/larrygreen3/pandas-validate/issues"