[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas-validate"
version = "0.1.0"
authors = [
  { name="Larry Green", email="larrygreen@duck.com" },
]
description = "A python package used for validating pandas dataframes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/larrygreen3/pandas-validate"
"Bug Tracker" = "https://github.com/larrygreen3/pandas-validate/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
